<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".PairedDeviceInfo">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/BTScan"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:minWidth="120dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"

            android:visibility="gone"
            android:text="Scan Now"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"

            />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paired"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="64dp"
            android:contentDescription="List of paired devices"
            android:importantForAccessibility="no"/>

        <LinearLayout
            android:id="@+id/btheader"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="89dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/device_name"
                android:textSize="15dp"
                android:textStyle="bold"
                android:importantForAccessibility="no"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/mac_address"
                android:textSize="15dp"
                android:textStyle="bold"
                android:importantForAccessibility="no"/>


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVBTPairedDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btheader"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:visibility="visible"
            tools:layout_editor_absoluteY="109dp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"

        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="gone">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Available Device"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="228dp" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="247dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Device Name"
                android:textSize="15dp"

                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="20dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="Mac Address"
                android:textSize="15sp"
                android:textStyle="bold" />


        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/RVBTAvailable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            tools:layout_editor_absoluteY="267dp" />


    </LinearLayout>

</LinearLayout>